--- a/src/index.template.html
+++ b/src/index.template.html
@@ -16,6 +16,9 @@
     <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
   </head>
   <body>
+    <noscript>
+      地熱發電監控系統需要 JavaScript 才能運作.
+    </noscript>
     <!-- DO NOT touch the following DIV -->
     <div id="q-app"></div>
   </body>
