--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://scada.hanl.in/" />
+    <meta property="og:title" content="<%= productName %>" />
+    <meta property="og:description" content="<%= productDescription %>" />
+    <meta property="og:image" content="og-image.jpg" />
+
     <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
@@ -19,6 +26,7 @@
     <link rel="icon" type="image/ico" href="favicon.ico" />
   </head>
   <body>
+    <noscript> 地熱發電監控系統需要 JavaScript 才能運作. </noscript>
     <!-- quasar:entry-point -->
   </body>
 </html>
